# asr_resources_for_vision

./: CMakeLists.txt  License.txt  Readme.md  appropriate_calibration_call.sh  package.xml  readme.txt
launch/image_acquisition_pipelines/: stereo_rig.launch  unsynced_stereo_proc.launch
launch/image_acquisition_pipelines/kinect/kinect_dome/: depth_A00366804717043A.yaml  kinect_with_registered_guppy_dome.launch  rgb_A00366804717043A.yaml
launch/image_acquisition_pipelines/kinect/kinect_mild/: depth_A00363A05819052A.yaml  kinect_with_registered_guppy_mild.launch  rgb_A00363A05819052A.yaml
launch/image_acquisition_pipelines/stereo_rigs/: guppy_head_dome.launch  guppy_head_mild.launch  marlin.yaml  marlin_head.launch
launch/image_acquisition_pipelines/trunk/: guppy_f0m4.yaml  guppy_f7m0.yaml  guppy_head_f0m4_left_dome.ini  guppy_head_f0m4_right_dome.ini  guppy_head_f7m0_left_dome.ini  guppy_head_f7m0_left_mild.ini  guppy_head_f7m0_right_dome.ini  guppy_head_f7m0_right_mild.ini  guppy_head_full_dome.launch  guppy_head_full_mild.launch  guppy_head_vga_dome.launch  marlin_f0m5.yaml  marlin_f0m5_left_dome.ini  marlin_f0m5_right_dome.ini  marlin_head_vga_mild.launch
