<?xml version="1.0" ?>
<package>
  <name>asr_resources_for_vision</name>
  <version>1.0.0</version>
  <description> 
    This package is intended to hold bits and pieces that are related to computer vision in PbD, but that are not big enough to make up an own package.
    Currently it contains the launch scripts that are start up data acquisition from vision sensors (stereo camera system and kinect). 
  </description>
  <author>Heizmann Heinrich, Meißner Pascal</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
