<?xml version="1.0" ?>
<package>
  <name>asr_resources_for_vision</name>
  <version>1.0.0</version>
  <description> 
    This package holds bits and pieces that are related to the acquisition of color and depth-image data streams with robot heads. 
    Currently, it contains a hierarchy of launch scripts to start up simultaneous data acquisition from complex setups of vision sensors as encountered on robot heads 
    (e.g. RGB-D in combination with a color camera or a stereo camera setup).
  </description>
  <author>Heizmann Heinrich, Meißner Pascal</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/asr_resources_for_vision</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
